Seccubus V2 Change Log

Seccubus V2 is currently in Alpha phase. Even though we tested this code
ourselves do not expect production ready code yet.

xx-08-2011 - 2.0.alpha3
New features / Issues resolved

Bugs fixed:
#36 - Nessus scans don't seem to see targets
https://sourceforge.net/apps/trac/seccubus/ticket/36
#12 - Gone hosts not not detected correctly
https://sourceforge.net/apps/trac/seccubus/ticket/12

17-03-2011 - 2.0.alpha2 

New features / Issues resolved
Fixed slow speed of updates to multiple findings  
Scanning with Nessus should work a lot better in this version

Bug fixed:
#30 - Document running scans
https://sourceforge.net/apps/trac/seccubus/ticket/30
#32 - load_ivil command line argument 'scan' is ignored
https://sourceforge.net/apps/trac/seccubus/ticket/32
#34 - Default port for OpenVAS scanning not set correctly
https://sourceforge.net/apps/trac/seccubus/ticket/34
#35 - ivil does not import title of Nessus finiding
https://sourceforge.net/apps/trac/seccubus/ticket/35
#37 - @HOSTS gets expanded to /tmp/seccus.hosts.PID in stead of
/tmp/seccubus.hosts.PID
https://sourceforge.net/apps/trac/seccubus/ticket/37
#38 - nessus2ivil should not die on unknown attribute
https://sourceforge.net/apps/trac/seccubus/ticket/38


15-03-2011 - 2.0.alpha1 - First internal alpha release