@@ -5,12 +5,16 @@ ourselves do not expect production ready code yet.
 
 xx-08-2011 - 2.0.alpha3
 New features / Issues resolved
+* Major bug in the delta engine resolved. It turned out that statusses where
+  not processed after a scan, but was called by the load_ivil utility.
 
 Bugs fixed:
 #36 - Nessus scans don't seem to see targets
 https://sourceforge.net/apps/trac/seccubus/ticket/36
 #12 - Gone hosts not not detected correctly
 https://sourceforge.net/apps/trac/seccubus/ticket/12
+#42 - Scan parameters --workspace and --scan should be added automatically
+https://sourceforge.net/apps/trac/seccubus/ticket/42
 
 17-03-2011 - 2.0.alpha2 
 
